# streamflow-docker

./: .gitignore  Makefile  README.md  devenv.nix  project_req.md  pyproject.toml  requirements.txt
.github/workflows/: weekly_standup.yml
airflow/dags/: smoke_test_dag.py  streamflow_daily_summary.py  streamflow_reprocess_recovery.py
config/: pipeline.yml  producer.yml
data/: pregenerated_events.jsonl
data/metadata/: catalog.csv
docker/: airflow.Dockerfile  compose.yml  producer.Dockerfile
kafka/: entrypoint.sh  healthcheck.sh  init-topics.sh
presentation/: slides.tex  slides_outline.txt
scripts/: cleanup_data.py  generate_pregen_data.py
spark/jobs/: daily_summary.py  reprocess_rejects.py  schemas.py  smoke_test.py  streaming_ingest.py
src/streamflow/: __init__.py  producer.py  quality.py  schemas.py
tests/: conftest.py  test_pregen_data.py  test_producer_replay.py  test_quality.py
