[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamflow"
version = "0.1.0"
description = "Streamflow stream processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python-ng",
    "pyyaml",
]

[project.optional-dependencies]
spark = [
    "pyspark",
]
airflow = [
    "apache-airflow",
    "apache-airflow-providers-apache-spark",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["spark/jobs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
